--- a/report/report.tex
+++ b/report/report.tex
@@ -87,6 +87,9 @@
 \section{Method}
 \input{method.tex}
 
+\section{Implementation}
+\input{method.tex}
+
 \section{Experiments}
 \input{experiment.tex}	
 
