Method structure and todos

--- a/report/intro.tex
+++ b/report/intro.tex
@@ -1,7 +1,7 @@
 %!TEX root = report.tex
 
 
-\todo[inline]{Why is looking at the rupture dynamics of mud/paint useful. Give a nice example, e.g., the mona lisa.}
+\todo[inline]{Why is looking at the rupture dynamics of mud/paint useful. Give a nice example, e.g., the Mona Lisa.}
 
 \todo[inline]{How is this problem tackled before. E.g., Vogel et al. which models the rupture dynamics of mud in the following way: ... -> conclusion a slow but representative model/method.}
 
