--- a/report/method.tex
+++ b/report/method.tex
@@ -1,4 +1,19 @@
 %!TEX root = report.tex
 
+\todo[inline]{Intro plus what one can find in this section... }
+
+\subsection{The model}
+
+\todo[inline]{Decribe our model: }
+
+\subsection{The Vogel model}
+
+\todo[inline]{Short review of the model from Vogel et al. So we can contrast this in the last section}
+
+\subsection{Contrast}
+
+\todo[inline]{Describe the important differences of the two models.}
+
+
 \todo[inline]{Story from the presentation. Different types of particles. Springs. How the particles are connected, with those springs (square uniform grid). Things like energy and what is a stable system?}
 
