More method todos

--- a/report/method.tex
+++ b/report/method.tex
@@ -4,7 +4,15 @@
 
 \subsection{The model}
 
-\todo[inline]{Decribe our model: }
+\todo[inline]{Decribe our model:  1. Properties of single particles and connection between two (springs)}
+
+\todo[inline]{Describe our model: 2. Initialization of the grid and spring constants. (Which distribution and parameters)}
+
+\todo[inline]{Describe how the model can be solved/stabilized}
+
+\todo[inline]{Decribe how springs break (two or three methods)}
+
+\todo[inline]{Reference that the step after this is the solve/stabilization part of this section.}
 
 \subsection{The Vogel model}
 
