--- a/report/report.tex
+++ b/report/report.tex
@@ -88,7 +88,7 @@
 \input{method.tex}
 
 \section{Implementation}
-\input{method.tex}
+\input{implementation.tex}
 
 \section{Experiments}
 \input{experiment.tex}	
