--- a/report/implementation.tex
+++ b/report/implementation.tex
@@ -1,3 +1,9 @@
 %!TEX root = report.tex
 
-\todo[inline]{Pseudocode: init, stabilize, break, stabilize, break. Per methode uitwerken hoe die werkt, denk ik. Inclusief matrix verhaal voor Bekker.}
+\todo[inline]{Pseudocode: init, stabilize, break, stabilize, break.}
+
+\todo[inline]{Hoe werkt init, leg uit hoe die matrices gebouwd worden}
+
+\todo[inline]{Hoe werkt stabilize}
+
+\todo[inline]{Hoe werkt break}
