--- a/report/report.tex
+++ b/report/report.tex
@@ -53,6 +53,16 @@
 \usepackage{csquotes}
 \bibliography{biblio}
 
+% Pseudo code
+\usepackage[algoruled,vlined, shortend]{algorithm2e}
+\usepackage[export]{adjustbox}
+\usepackage{setspace}
+
+\crefname{algocf}{algorithm}{algorithms}
+\Crefname{algocf}{Algorithm}{Algorithms}
+\crefname{algocfline}{line}{lines}
+\Crefname{algocfline}{Line}{Lines}
+
 % Temp
 \usepackage[obeyFinal]{todonotes}
 % \usepackage{showlabels}
