--- a/report/experiment.tex
+++ b/report/experiment.tex
@@ -1,6 +1,6 @@
 %!TEX root = report.tex
 
-\todo[inline]{Compare grid with and without grounding springs}
+\todo[inline]{Geen grounding -> ballon effect -> add grounding springs. Compare results.}
 
 \todo[inline]{Compare different methods of breaking}
 
