--- a/report/report.tex
+++ b/report/report.tex
@@ -100,11 +100,11 @@
 \section{Implementation}
 \input{implementation.tex}
 
-\section{Experiments}
+\section{Experiments \& Discussion}
 \input{experiment.tex}	
 
-\section{Discussion}
-\input{discussion}
+% \section{Discussion}
+% \input{discussion}
 
 \section{Conclusion}
 \input{conclusion.tex}
