--- a/report/report.tex
+++ b/report/report.tex
@@ -77,7 +77,7 @@
 % Other commands
 \renewcommand{\t}[1]{\texttt{#1}}
 
-\title{Generic title\\and subtitle}
+\title{A String Simulation of Crack Dynamics}
 \author{%
 	Rick van Veen (s1883933)%
 	\thanks{These authors contributed equally to this work.}% 
