--- a/report/intro.tex
+++ b/report/intro.tex
@@ -1,46 +1,11 @@
 %!TEX root = report.tex
 
-
 \todo[inline]{Why is looking at the rupture dynamics of mud/paint useful. Give a nice example, e.g., the Mona Lisa.}
 
+\textcite{vogel2005studies1,vogel2005studies2}
 \todo[inline]{How is this problem tackled before. E.g., Vogel et al. which models the rupture dynamics of mud in the following way: ... -> conclusion a slow but representative model/method.}
 
 \todo[inline]{Global idea of the model/method presented in this paper. ... -> hypothesis: fast but maybe not as a representative model and simulation of the crack dynamics of mud/paint.}
 
-\todo[inline]{Structure of the paper -> stuff like section x discusses blaat. etc. you know ;)}
 
-% \begin{figure}
-% 	\centering
-% 	\resizebox{0.9\columnwidth}{!}{%
-% 		\initialGrid
-% 	}
-% 	\caption{Caption here}
-% 	\label{fig:1:}
-% \end{figure}
-
-% \begin{figure}
-% 	\centering
-% 	\resizebox{0.9\columnwidth}{!}{%
-% 		\stabilizedInitialGrid
-% 	}
-% 	\caption{Caption here}
-% 	\label{fig:2:}
-% \end{figure}
-
-% \begin{figure}
-% 	\centering
-% 	\resizebox{0.9\columnwidth}{!}{%
-% 		\cutGrid
-% 	}
-% 	\caption{Caption here}
-% 	\label{fig:3:}
-% \end{figure}
-
-% \begin{figure}
-% 	\centering
-% 	\resizebox{0.9\columnwidth}{!}{%
-% 		\stabilizedCutGrid
-% 	}
-% 	\caption{Caption here}
-% 	\label{fig:4:}
-% \end{figure}
+\Cref{s:method} presents the theory behind the presented method. The implementation of our simulation is introduced in \cref{s:implementation}. \Cref{s:ExperimentsDiscussion} presents the experiments we performed with our implementation and presents and reviews the gathered results. Finally, \cref{s:conclusion} discusses our conclusion.
