--- a/report/method.tex
+++ b/report/method.tex
@@ -1,8 +1,9 @@
 %!TEX root = report.tex
 
 \todo[inline]{Intro plus what one can find in this section... }
+When simulating the dynamics of cracking material, one needs a model that represents the properties of that materials, i.e., in the case of this paper mud or paint. In \cref{ss:method:model} we firstly present our model. To be able to show the contrast between the models, in \cref{ss:method:contrast}, we shortly review the model given by \citeauthor{vogel2005studies2} in \cref{ss:method:vogel}.
 
-\subsection{The model}
+\subsection{The model}\label{ss:method:model}
 
 \todo[inline]{Decribe our model:  1. Properties of single particles and connection between two (springs)}
 
@@ -14,11 +15,11 @@
 
 \todo[inline]{Reference that the step after this is the solve/stabilization part of this section.}
 
-\subsection{The Vogel model}
+\subsection{The Vogel model}\label{ss:method:vogel}
 
 \todo[inline]{Short review of the model from Vogel et al. So we can contrast this in the last section}
 
-\subsection{Contrast}
+\subsection{Contrast}\label{ss:method:contrast}
 
 \todo[inline]{Describe the important differences of the two models.}
 
