--- a/report/intro.tex
+++ b/report/intro.tex
@@ -2,10 +2,11 @@
 
 \todo[inline]{Why is looking at the rupture dynamics of mud/paint useful. Give a nice example, e.g., the Mona Lisa.}
 
-\textcite{vogel2005studies1,vogel2005studies2}
-\todo[inline]{How is this problem tackled before. E.g., Vogel et al. which models the rupture dynamics of mud in the following way: ... -> conclusion a slow but representative model/method.}
+% \todo[inline]{How is this problem tackled before. E.g., Vogel et al. which models the rupture dynamics of mud in the following way: ... -> conclusion a slow but representative model/method.}
+\textcite{vogel2005studies2} present a simulation for crack formation that models the involved physical processes. Their method represents linear quasi elastic materials with a lattice of Hookean springs of finite strength. This model leads to realistic overall crack networks. This ``model reproduces the characteristic dynamics of crack formation"\cite{vogel2005studies2} and the properties can be directly linked to the physical material properties and boundary conditions. However it is computationally expensive.
 
-\todo[inline]{Global idea of the model/method presented in this paper. ... -> hypothesis: fast but maybe not as a representative model and simulation of the crack dynamics of mud/paint.}
+% \todo[inline]{Global idea of the model/method presented in this paper. ... -> hypothesis: fast but maybe not as a representative model and simulation of the crack dynamics of mud/paint.}
+We propose a simplified model that although not as representative of prominent features physical can be solved faster and should give a reasonable indication of the crack dynamics. Our model 
 
 
 \Cref{s:method} presents the theory behind the presented method. The implementation of our simulation is introduced in \cref{s:implementation}. \Cref{s:ExperimentsDiscussion} presents the experiments we performed with our implementation and presents and reviews the gathered results. Finally, \cref{s:conclusion} discusses our conclusion.
