Zou moeten werken

--- a/report/method.tex
+++ b/report/method.tex
@@ -4,6 +4,15 @@
 
 \subsection{The model}
 
+\begin{figure}
+	\centering
+	\resizebox{0.9\columnwidth}{!}{%
+		\singleSpring
+	}
+	\caption{Illustration of a single connection (spring) between two particles.}
+	\label{fig:3:}
+\end{figure}
+
 \todo[inline]{Decribe our model:  1. Properties of single particles and connection between two (springs)}
 
 \todo[inline]{Describe our model: 2. Initialization of the grid and spring constants. (Which distribution and parameters)}
