Blaat in de intro

--- a/report/intro.tex
+++ b/report/intro.tex
@@ -1,12 +1,14 @@
 %!TEX root = report.tex
+Water flow and solute transport are strongly influenced by the network of macropores that results from dessication. Modern models of water flow and solute transport consider the flow of water withing these macropores, which partly accounts for the preferential flow. To that end we need a model of the dynamics of soil cracks. \todo[inline]{Verschillende methoden: 2D voghel, maar ook 3D met grounding springs.}
 
 \todo[inline]{Why is looking at the rupture dynamics of mud/paint useful. Give a nice example, e.g., the Mona Lisa.}
 
+\todo[inline]{Verschillende methodes noemen, ook een waar ze grounding springs gebruiken.}
+
 % \todo[inline]{How is this problem tackled before. E.g., Vogel et al. which models the rupture dynamics of mud in the following way: ... -> conclusion a slow but representative model/method.}
-\textcite{vogel2005studies2} present a simulation for crack formation that models the involved physical processes. Their method represents linear quasi elastic materials with a lattice of Hookean springs of finite strength. This model leads to realistic overall crack networks. This ``model reproduces the characteristic dynamics of crack formation"\cite{vogel2005studies2} and the properties can be directly linked to the physical material properties and boundary conditions. However it is computationally expensive.
+\textcite{vogel2005studies2} present a simulation for crack formation that models the involved physical processes. Their method represents linear quasi elastic materials with a lattice of Hookean springs of finite strength. This model leads to realistic overall crack networks. This ``model reproduces the characteristic dynamics of crack formation"\cite{vogel2005studies2} and the properties can be directly linked to the physical material properties and boundary conditions. The model by \citeauthor{vogel2005studies2} decreases the natural length of the springs in the system. Springs on which the strain is higher than some threshold are broken. The resulting changes are propagated radially throughout the lattice until a maximum number of steps has been reached, or the system has stabilized completely.
 
 % \todo[inline]{Global idea of the model/method presented in this paper. ... -> hypothesis: fast but maybe not as a representative model and simulation of the crack dynamics of mud/paint.}
-We propose a simplified model that although not as representative of prominent features physical can be solved faster and should give a reasonable indication of the crack dynamics. Our model 
+We propose a simplified model that although not as representative of prominent features physical can be solved faster and should give a reasonable indication of the crack dynamics. Our model represents the particles and the springs between them as a linear model. This allows use to use a linear solver to determine the new positions of the particles after springs have been broken. In this newly stabilized system we once again break springs. The stabilize, break springs is repeated until no more springs can be broken, be it because there are no more springs left, or because there are no more springs that satisfy the requirement for being broken. The repeated stabilization and breaking of springs models the dessication of the material.
 
-
-\Cref{s:method} presents the theory behind the presented method. The implementation of our simulation is introduced in \cref{s:implementation}. \Cref{s:ExperimentsDiscussion} presents the experiments we performed with our implementation and presents and reviews the gathered results. Finally, \cref{s:conclusion} discusses our conclusion.
+\Cref{s:method} presents the theory of our method. The implementation the simulation based on the discussed method is introduced in \cref{s:implementation}. \Cref{s:ExperimentsDiscussion} presents the experiments we performed with our implementation and presents and reviews the gathered results. Finally, \cref{s:conclusion} discusses our conclusion.
