First todo of the model subsection of the method section

--- a/report/report.tex
+++ b/report/report.tex
@@ -66,6 +66,11 @@
 % Temp
 \usepackage[obeyFinal]{todonotes}
 % \usepackage{showlabels}
+\newcommand{\laura}[1]{\todo[inline, color=red]{\textbf{Laura:} #1}}
+\newcommand{\rick}[1]{\todo[inline, color=green]{\textbf{Rick:} #1}}
+\newcommand{\future}[1]{\todo[inline, color=yellow]{\textbf{Possibly eventually:} #1}}
+\newcommand{\plaatje}[1]{\todo[inline, color=blue!20]{\textbf{Plaatje:} #1}}
+\newcommand{\ooit}[1]{\todo[inline, color=green!20]{\textbf{(n)ooit:} #1}}
 
 % Math commands
 \newcommand{\normal}[2]{\ensuremath{\mathcal{N}\left(#1,\, #2\right)}}
