--- a/report/method.tex
+++ b/report/method.tex
@@ -5,18 +5,23 @@ When simulating the dynamics of cracking material, one needs a model that repres
 
 \subsection{The model}\label{ss:method:model}
 
+\laura{Read the following paragraph(s) which should implement the following todo: ``Decribe our model:  1. Properties of single particles and connection between two (springs)''}
+To model the rupture dynamics of mud we opted for a spring simulation. In this simulation Mud is modeled by particles connected by springs. The cracking of mud is a very slow process and therefore we do not take the velocity and frictional forces into consideration, i.e., we ignore Newton's laws of motion and Stokes' law, which describes friction. We can therefore keep the particles massless and the simulation process simple, by only considering the locations of the particles. 
+
 \begin{figure}
 	\centering
-	\resizebox{0.9\columnwidth}{!}{%
-		\singleSpring
-	}
-	\caption{Illustration of a single connection (spring) between two particles.}
-	\label{fig:3:}
+	\singleSpring
+	\caption{Illustration of a single connection, i.e., a spring, between two particles. The distance between particle $v_i$ and $v_j$ is given by $X$. The variable $l_0$ is used to denote the natural length of a spring with spring constant $k_0$.}
+	\label{fig:method:spring}
 \end{figure}
 
-\todo[inline]{Decribe our model:  1. Properties of single particles and connection between two (springs)}
+The image in \cref{fig:method:spring} shows the illustration of a single connection between two particles $v_i$ and $v_j$. The connection, as stated in the previous paragraph, is modeled with using a spring. The force on a Hookean spring is given by $F = -k X\,$, where $F$ is restoring force exerted by the spring on whatever is pulling on the other end. If the stress on a spring exceeds some threshold, or is among the $k$ springs with the highest stress (see \cref{s:implementation}), it breaks and cracks appear.
 
-\todo[inline]{Describe our model: 2. Initialization of the grid and spring constants. (Which distribution and parameters)}
+\laura{Read the following paragraph(s) which should implement the following todo: ``Describe our model: 2. Initialization of the grid and spring constants. (Which distribution and parameters)''}
+
+\plaatje{Illustration of a uniform square grid.}
+
+
 
 \todo[inline]{Describe how the model can be solved/stabilized}
 
