--- a/report/report.tex
+++ b/report/report.tex
@@ -112,11 +112,11 @@
 
 \section{Introduction}
 \label{s:introduction}
-% \input{intro.tex}
+\input{intro.tex}
 
 \section{Method}
 \label{s:method}
-% \input{method.tex}
+\input{method.tex}
 
 \section{Implementation}
 \label{s:implementation}
