MatLab colors and screenshot

--- a/report/method.tex
+++ b/report/method.tex
@@ -23,7 +23,8 @@ The previous paragraphs described a single connection between particles. This is
 
 \begin{figure}
 	\centering
-	\missingfigure{\plaatje{Illustration of a uniform square grid. There is no need for particle names and that kind of stuff, just a visualization of the uniform square grid, with a reasonable number of particles.}}
+	% \missingfigure{\plaatje{Illustration of a uniform square grid. There is no need for particle names and that kind of stuff, just a visualization of the uniform square grid, with a reasonable number of particles.}}
+	\includegraphics[width=0.9\columnwidth]{img/uniform_square_grid.png}
 	\caption{Starting layout of the particles representing uncracked mud.}
 	\label{fig:model:layout}
 \end{figure}
