--- a/report/report.tex
+++ b/report/report.tex
@@ -1,4 +1,4 @@
-\documentclass[twoside, a4paper, twocolumn, leqno, fleqn, draft]{article}
+\documentclass[twoside, a4paper, twocolumn, leqno, fleqn, final]{article}
 \usepackage[english]{babel}
 \usepackage{a4wide}
 
