Eerste semi-complete versie van de introductie.

--- a/report/biblio.bib
+++ b/report/biblio.bib
@@ -19,3 +19,36 @@
   year={2005},
   publisher={Elsevier}
 }
+
+@article{chertkov2000using,
+  title={Using surface crack spacing to predict crack network geometry in swelling soils},
+  author={Chertkov, VY},
+  journal={Soil Science Society of America Journal},
+  volume={64},
+  number={6},
+  pages={1918--1921},
+  year={2000},
+  publisher={Soil Science Society}
+}
+
+@article{horgan2000empirical,
+  title={An empirical stochastic model for the geometry of two-dimensional crack growth in soil (with Discussion)},
+  author={Horgan, GW and Young, IM},
+  journal={Geoderma},
+  volume={96},
+  number={4},
+  pages={263--276},
+  year={2000},
+  publisher={Elsevier}
+}
+
+@article{kitsunezaki1999fracture,
+  title={Fracture patterns induced by desiccation in a thin layer},
+  author={Kitsunezaki, So},
+  journal={Physical Review E},
+  volume={60},
+  number={6},
+  pages={6449},
+  year={1999},
+  publisher={APS}
+}
