--- a/report/report.tex
+++ b/report/report.tex
@@ -116,7 +116,7 @@
 
 \section{Method}
 \label{s:method}
-\input{method.tex}
+% \input{method.tex}
 
 \section{Implementation}
 \label{s:implementation}
