--- a/report/report.tex
+++ b/report/report.tex
@@ -1,4 +1,4 @@
-\documentclass[twoside, a4paper, twocolumn, leqno, fleqn, final]{article}
+\documentclass[twoside, a4paper, twocolumn, leqno, fleqn, draft]{article}
 \usepackage[english]{babel}
 \usepackage{a4wide}
 
@@ -120,18 +120,18 @@
 
 \section{Implementation}
 \label{s:implementation}
-% \input{implementation.tex}
+\input{implementation.tex}
 
 \section{Experiments \& Discussion}
 \label{s:ExperimentsDiscussion}
-% \input{experiment.tex}	
+\input{experiment.tex}	
 
 % \section{Discussion}
 % \input{discussion}
 
 \section{Conclusion}
 \label{s:conclusion}
-% \input{conclusion.tex}
+\input{conclusion.tex}
 
 \printbibliography
 
