Fix in ics file

--- a/report/ics.sty
+++ b/report/ics.sty
@@ -9,7 +9,6 @@
 %\stabilizedInitialGrid
 %\cutGrid
 %\stabilizedCutGrid
-%\singleSpring
 
 % Define text based macros
 \newcommand{\freeParticle}[1]{\ensuremath{v_{#1}}}
@@ -30,13 +29,11 @@
 
 
 \tikzset{
-		edgeStyle/.style = {line width = 1.3pt},
-		fixed/.style = 		 {anchor=base,fill,circle,inner sep=1.5pt},
-		free/.style =	     {circle,draw, inner sep = 1pt},
-    spring/.style =    {fill=white,circle,inner sep = 0.1pt, anchor=center, 
-    midway},
-    label/.style =    {inner sep = 0.1pt, anchor=center, midway, above=1ex},
-		node distance=2.3cm
+    edgeStyle/.style = {line width = 1.3pt},
+    fixed/.style =     {anchor=base,fill,circle,inner sep=1.5pt},
+    free/.style =      {circle,draw, inner sep = 1pt},
+    spring/.style =    {fill=white,circle,inner sep = 0.1pt, anchor=center, midway},
+    node distance=2.3cm
 }
 
 % source destination name
@@ -126,46 +123,46 @@
 }
 
 \newcommand{\initialGrid}{%
-	\begin{tikzpicture}
-  	{
-    	\pgfmathtruncatemacro{\numRowsCols}{\numFreeRowsCols - 1}
-    	\pgfmathtruncatemacro{\numRowsColsMinusOne}{\numRowsCols - 1}
+  \begin{tikzpicture}
+    {
+      \pgfmathtruncatemacro{\numRowsCols}{\numFreeRowsCols - 1}
+      \pgfmathtruncatemacro{\numRowsColsMinusOne}{\numRowsCols - 1}
 
-		\drawFreeParticles{0}{0}
+    \drawFreeParticles{0}{0}
 
-    	\drawSpringsBetweenFreeParticles
+      \drawSpringsBetweenFreeParticles
 
-    	\drawFixedParticles{\numFreeRowsCols}{\gridSpacing}      
-  }	
-  \end{tikzpicture}	%
+      \drawFixedParticles{\numFreeRowsCols}{\gridSpacing}      
+  } 
+  \end{tikzpicture} %
 }
 
 \newcommand{\drawFreeParticles}[2]{
-    	\foreach \x in {0,...,\numRowsCols}
-      		\foreach \y in {0,...,\numRowsCols} {
-          		\pgfmathtruncatemacro{\label}{\x - 3 *  \y + 7 - 1}
-          		\node [free]  (\x\y) at (
-          			{\gridSpacing*\x + (rand + 1) / 2 * (#2 - #1) + #1},
-          			{\gridSpacing*\y + (rand + 1) / 2 * (#2 - #1) + #1}
-          			) 
-          			{\freeParticle{\label}};
-      		} 	
+      \foreach \x in {0,...,\numRowsCols}
+          \foreach \y in {0,...,\numRowsCols} {
+              \pgfmathtruncatemacro{\label}{\x - 3 *  \y + 7 - 1}
+              \node [free]  (\x\y) at (
+                {\gridSpacing*\x + (rand + 1) / 2 * (#2 - #1) + #1},
+                {\gridSpacing*\y + (rand + 1) / 2 * (#2 - #1) + #1}
+                ) 
+                {\freeParticle{\label}};
+          }   
 }
 
 \newcommand{\stabilizedInitialGrid}{
-	\pgfmathsetseed{1138}
-	\begin{tikzpicture}
-  	{
-    	\pgfmathtruncatemacro{\numRowsCols}{\numFreeRowsCols - 1}
-    	\pgfmathtruncatemacro{\numRowsColsMinusOne}{\numRowsCols - 1}
+  \pgfmathsetseed{1138}
+  \begin{tikzpicture}
+    {
+      \pgfmathtruncatemacro{\numRowsCols}{\numFreeRowsCols - 1}
+      \pgfmathtruncatemacro{\numRowsColsMinusOne}{\numRowsCols - 1}
 
-    	\drawFreeParticles{-0.5}{0.5}
+      \drawFreeParticles{-0.5}{0.5}
 
-    	\drawSpringsBetweenFreeParticles
+      \drawSpringsBetweenFreeParticles
 
-    	\drawFixedParticles{\numFreeRowsCols}{\gridSpacing}      
-  }	
-  \end{tikzpicture}	%
+      \drawFixedParticles{\numFreeRowsCols}{\gridSpacing}      
+  } 
+  \end{tikzpicture} %
 }
 
 \newcommand{\drawSpringsBetweenFreeParticleCond}[1]{
@@ -244,7 +241,7 @@
 
 \newcommand{\cutGrid}{
   \pgfmathsetseed{1138}
-	\begin{tikzpicture}
+  \begin{tikzpicture}
   {
     \pgfmathtruncatemacro{\numRowsCols}{\numFreeRowsCols - 1}
     \pgfmathtruncatemacro{\numRowsColsMinusOne}{\numRowsCols - 1}
@@ -252,8 +249,8 @@
     \drawFreeParticles{-0.5}{0.5}
     \drawFixedParticlesCond{\numFreeRowsCols}{\gridSpacing}{\stillExistingSprings}
     \drawSpringsBetweenFreeParticleCond{\stillExistingSprings}
-  }	
-  \end{tikzpicture}	%
+  } 
+  \end{tikzpicture} %
 }
 
 \newcommand{\stabilizedCutGrid}{
@@ -304,23 +301,6 @@
     \drawFixedParticlesCond{\numFreeRowsCols}{\gridSpacing}{\stillExistingSprings}
     \drawSpringsBetweenFreeParticleCond{\stillExistingSprings}
   } 
-  \end{tikzpicture} %
-}
-
-\newcommand{\singleSpring}{
-  \pgfmathsetseed{1138}
-  \begin{tikzpicture}
-    \node [free]  (left)  at  (0,0)   {\freeParticle{i}};
-    \node [free]  (right)   at  (4,0) {\freeParticle{j}};
-    \drawSpring{left}{right}{0}
-
-    \node (leftUpper) at (0,0.5) {};
-    \node (rightUpper) at (4,0.5) {};
-    \draw[dashed, <->] (leftUpper)--(rightUpper) node[label] {$X = \abs{x_i - x_j}$};
-
-    \node (leftLower) at (1,-0.9) {};
-    \node (rightLower) at (3,-0.9) {};
-    \draw[dashed, <->] (leftLower)--(rightLower) node[label] {$l_0$};
   \end{tikzpicture} %
 }
 
