--- a/report/implementation.tex
+++ b/report/implementation.tex
@@ -10,38 +10,38 @@ This section discusses our implementation of our simulation, based on the theory
 \subsection{Break Springs}
 \todo[inline]{Hoe werkt break}
 
-% \begin{figure}
-% 	\centering
-% 	\resizebox{0.9\columnwidth}{!}{%
-% 		\initialGrid
-% 	}
-% 	\caption{Caption here}
-% 	\label{fig:1:}
-% \end{figure}
+\begin{figure}
+	\centering
+	\resizebox{0.9\columnwidth}{!}{%
+		\initialGrid
+	}
+	\caption{Caption here}
+	\label{fig:1:}
+\end{figure}
 
-% \begin{figure}
-% 	\centering
-% 	\resizebox{0.9\columnwidth}{!}{%
-% 		\stabilizedInitialGrid
-% 	}
-% 	\caption{Caption here}
-% 	\label{fig:2:}
-% \end{figure}
+\begin{figure}
+	\centering
+	\resizebox{0.9\columnwidth}{!}{%
+		\stabilizedInitialGrid
+	}
+	\caption{Caption here}
+	\label{fig:2:}
+\end{figure}
 
-% \begin{figure}
-% 	\centering
-% 	\resizebox{0.9\columnwidth}{!}{%
-% 		\cutGrid
-% 	}
-% 	\caption{Caption here}
-% 	\label{fig:3:}
-% \end{figure}
+\begin{figure}
+	\centering
+	\resizebox{0.9\columnwidth}{!}{%
+		\cutGrid
+	}
+	\caption{Caption here}
+	\label{fig:3:}
+\end{figure}
 
-% \begin{figure}
-% 	\centering
-% 	\resizebox{0.9\columnwidth}{!}{%
-% 		\stabilizedCutGrid
-% 	}
-% 	\caption{Caption here}
-% 	\label{fig:4:}
-% \end{figure}
+\begin{figure}
+	\centering
+	\resizebox{0.9\columnwidth}{!}{%
+		\stabilizedCutGrid
+	}
+	\caption{Caption here}
+	\label{fig:4:}
+\end{figure}
