--- a/report/report.tex
+++ b/report/report.tex
@@ -1,4 +1,4 @@
-\documentclass[twoside, a4paper, twocolumn, leqno, fleqn, final]{article}
+\documentclass[twoside, a4paper, twocolumn, leqno, fleqn]{article}
 \usepackage[english]{babel}
 \usepackage{a4wide}
 
@@ -74,7 +74,7 @@
 
 % Math commands
 \newcommand{\normal}[2]{\ensuremath{\mathcal{N}\left(#1,\, #2\right)}}
-\renewcommand{\vec}[1]{\ensuremath{\mathbf{#1}}}
+% \renewcommand{\vec}[1]{\ensuremath{\mathbf{#1}}}
 \usepackage{mathtools}
 
 \DeclarePairedDelimiter\abs{\lvert}{\rvert}%
@@ -112,15 +112,15 @@
 
 \section{Introduction}
 \label{s:introduction}
-\input{intro.tex}
+% \input{intro.tex}
 
 \section{Method}
 \label{s:method}
-% \input{method.tex}
+\input{method.tex}
 
 \section{Implementation}
 \label{s:implementation}
-% \input{implementation.tex}
+\input{implementation.tex}
 
 \section{Experiments \& Discussion}
 \label{s:ExperimentsDiscussion}
