--- a/report/report.tex
+++ b/report/report.tex
@@ -22,7 +22,7 @@
 %Plaatjes
 \usepackage{tikz}
 \usepackage{graphicx}
-\usepackage[hang, small,labelfont=bf,up,textfont=sl,up, justification=raggedright]{caption}
+\usepackage[hang, small, labelfont=bf, up, textfont=sl,up, justification=raggedright]{caption}
 \usepackage{subcaption}
 \DeclareCaptionLabelFormat{opening}{(#2)}
 \captionsetup{subrefformat=opening}
@@ -74,7 +74,7 @@
 
 % Math commands
 \newcommand{\normal}[2]{\ensuremath{\mathcal{N}\left(#1,\, #2\right)}}
-\renewcommand{\vec}[1]{\ensuremath{\mathbf{#1}}}
+% \renewcommand{\vec}[1]{\ensuremath{\mathbf{#1}}}
 \usepackage{mathtools}
 
 \DeclarePairedDelimiter\abs{\lvert}{\rvert}%
@@ -105,7 +105,6 @@
 	\footnotemark[1]%
 }
 
-
 \begin{document}
 
 \maketitle
@@ -116,7 +115,7 @@
 
 \section{Method}
 \label{s:method}
-% \input{method.tex}
+\input{method.tex}
 
 \section{Implementation}
 \label{s:implementation}
