Centreer equations, die matrices zijn er heel gek uit als ze links uitgelijnd zijn.

--- a/report/report.tex
+++ b/report/report.tex
@@ -1,4 +1,4 @@
-\documentclass[twoside, a4paper, twocolumn, reqno, fleqn]{article}
+\documentclass[twoside, a4paper, twocolumn, reqno]{article}
 \usepackage[english]{babel}
 \usepackage{a4wide}
 
