--- a/report/ics.sty
+++ b/report/ics.sty
@@ -33,6 +33,7 @@
     fixed/.style =     {anchor=base,fill,circle,inner sep=1.5pt},
     free/.style =      {circle,draw, inner sep = 1pt},
     spring/.style =    {fill=white,circle,inner sep = 0.1pt, anchor=center, midway},
+    label/.style =    {inner sep = 0.1pt, anchor=center, midway, above=1ex},    
     node distance=2.3cm
 }
 
