--- a/report/method.tex
+++ b/report/method.tex
@@ -1,12 +1,11 @@
 %!TEX root = report.tex
 
 \todo[inline]{Intro plus what one can find in this section... }
-When simulating the dynamics of cracking material, one needs a model that represents the properties of that materials, i.e., in the case of this paper mud or paint. In \cref{ss:method:model} we firstly present our model. To be able to show the contrast between the models, in \cref{ss:method:contrast}, we shortly review the model given by \citeauthor{vogel2005studies2} in \cref{ss:method:vogel}.
+When simulating the dynamics of cracking material, one needs a model that represents the properties of that materials, mud in our case. In \cref{ss:method:model} we present our model. \Cref{ss:method:vogel} presents the model introduced by \citeauthor{vogel2005studies2} on which ours is loosely based. So that we can contrast the two models in \cref{ss:method:contrast}.
 
 \subsection{The model}\label{ss:method:model}
-
-\laura{Read the following paragraph(s) which should implement the following todo: ``Decribe our model:  1. Properties of single particles and connection between two (springs)''}
-To model the rupture dynamics of mud we opted for a spring simulation. In this simulation Mud is modeled by particles connected by springs. The cracking of mud is a very slow process and therefore we do not take the velocity and frictional forces into consideration, i.e., we ignore Newton's and Stokes' laws. We can therefore keep the particles massless and only take the location of a particle in consideration. This also makes the simulation process relatively simple and linearly solvable, which is discussed shortly in this section and more thoroughly in \cref{s:implementation}.
+% \todo[inline]{``Decribe our model:  1. Properties of single particles and connection between two (springs)''}
+To model the rupture dynamics of mud we opted for a spring simulation. In this simulation mud is modeled by particles connected by Hookean springs. The cracking of mud is a very slow process and therefore we do not take the velocity and frictional forces into consideration, i.e., we ignore Newton's and Stokes' laws. Therefore we can use massless particles and only take the location of a particle into account. As a consequence it is possible to find the new position of particles using a matrix vector equation, which can be solved with a linear solver.
 
 \begin{figure}
 	\centering
@@ -17,20 +16,24 @@ To model the rupture dynamics of mud we opted for a spring simulation. In this s
 
 	    \node (leftUpper) at (0,0.5) {};
 	    \node (rightUpper) at (4,0.5) {};
-	    \draw[dashed, <->] (leftUpper)--(rightUpper) node[label] {$X = \abs{x_i - x_j}$};
+	    \draw[dashed, <->] (leftUpper)--(rightUpper) node[label] {$D_{ij} = \abs{x_i - x_j}$};
 
-	    \node (leftLower) at (1,-0.9) {};
-	    \node (rightLower) at (3,-0.9) {};
-	    \draw[dashed, <->] (leftLower)--(rightLower) node[label] {$l_0$};
+	    \node (leftLower) at (1,-0.5) {};
+	    \node (rightLower) at (3,-0.5) {};
+	    \draw[dashed, <->] (leftLower)--(rightLower) node[label, below=1ex] {$l_0$};
 	  \end{tikzpicture} %
-	\caption{Illustration of a single connection, i.e., a spring, between two particles. The distance between particle $v_i$ and $v_j$ is given by $X$. The variable $l_0$ is used to denote the natural length of a spring with spring constant $k_0$.}
+	\caption{Illustration of a spring, \spring{0}, connecting the particles \freeParticle{i} and \freeParticle{j}. The distance between the two particles is represented by $D_{ij}$, $x_i$ and $x_j$ refer to the position of \freeParticle{i} and \freeParticle{j}, respectively. The natural length of a spring is represented by $l_0$.}
 	\label{fig:method:spring}
 \end{figure}
 
 
 % \todo[inline]{Decribe how springs break (two or three methods)}
 
-The image in \cref{fig:method:spring} shows the illustration of a single connection between two particles $v_i$ and $v_j$. The connection, as stated in the previous paragraph, is modeled using a spring. The force on a Hookean spring is given by $F = -k X\,$, where $F$ is restoring force exerted by the spring on whatever is pulling on the other end; and $X = |x_i - x_j|$ the distance between the two particles. If the stress on a spring exceeds some threshold, or is among the $k$ springs with the highest stress (see \cref{s:implementation}), it breaks and cracks appear.
+\Cref{fig:method:spring} illustrates a single connection between two particles \freeParticle{i} and \freeParticle{j}. The connection between the two particle is modeled with the spring \spring{0}. The force $F$ on a Hookean spring is defined as
+\begin{equation}\label{eq:method:hookeslaw}
+	F = -k X,	
+\end{equation}
+where $F$ is the restoring force exerted by the spring on whatever is pulling on the other end. $X$ is the displacement of the string from it's relaxed position. To ensure that the final system of equations is linearly solvable we have to use springs with a natural length of zero. Consequently $X$ is equal to the distance between the particles that are connected by the spring, i.e., $D_{ij}$ in \cref{fig:method:spring}. If the stress on a spring exceeds some threshold, or is among the $n$ springs with the highest stress the string breaks, and cracks appear.
 
 \laura{Read the following paragraph(s) which should implement the following todo: ``Describe our model: 2. Initialization of the grid and spring constants. (Which distribution and parameters)''}
 
