Layout van de captions aangepast.

--- a/report/report.tex
+++ b/report/report.tex
@@ -22,7 +22,7 @@
 %Plaatjes
 \usepackage{tikz}
 \usepackage{graphicx}
-\usepackage[hang, small, labelfont=bf, up, textfont=sl,up, justification=raggedright]{caption}
+\usepackage[small, labelfont=bf, up, textfont=sl, up, justification=raggedright]{caption}
 \usepackage{subcaption}
 \DeclareCaptionLabelFormat{opening}{(#2)}
 \captionsetup{subrefformat=opening}
